--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && workbox generateSW workbox-config.js",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\""
@@ -25,13 +25,16 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.171.0"
+    "three": "^0.171.0",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -53,6 +56,7 @@
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "typescript-eslint": "^8.19.1"
+    "typescript-eslint": "^8.19.1",
+    "workbox-cli": "^7.3.0"
   }
 }
