--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.17.0",
     "@next/eslint-plugin-next": "^15.1.3",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
