--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,8 @@
 {
-  "rewrites": [
-    {
-      "source": "/service-worker.js",
-      "destination": "/_next/static/service-worker.js"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/$1"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/service-worker.js",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
-        }
-      ]
-    }
-  ]
-}
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
+    ]
+  }
