--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "15.1.3",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
