--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@marsidev/react-turnstile": "^1.1.0",
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
     "@sanity/client": "^6.24.1",
@@ -27,6 +28,7 @@
     "next": "15.1.3",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
