--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-three/fiber": "^8.17.10",
     "@sanity/client": "^6.24.1",
     "@sanity/image-url": "^1.1.0",
+    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query-devtools": "^5.80.6",
     "@types/three": "^0.171.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
